# peaceful-pie

./: .gitignore  Dockerfile  PeacefulPie.sln  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
PeacefulPie/: DedicatedFrameRate.cs  Exceptions.cs  NetManager.cs  PeacefulPie.csproj  RayCasts.cs  Simulation.cs
ci/: Dockerfile  build-ci.sh  build.sh  deploy-python.sh
examples/: .gitignore  README.md
examples/DungeonEscape/: .gitignore  README.md
examples/DungeonEscape/Assets/DungeonEscape/Prefabs/: DungeonEscapeAgent.prefab  DungeonEscapePlatform.prefab
examples/DungeonEscape/ProjectSettings/: InputManager.asset  ProjectSettings.asset
examples/DungeonEscape/UserSettings/: EditorUserSettings.asset
examples/DungeonEscape/UserSettings/Layouts/: default-2021.dwlt
examples/DungeonEscape/python/: .gitignore  mlflow_logging.py  mlflow_utils.py  models.py  my_unity_env.py  requirements.txt  rl1.py  run_inference.py  sbs3_checkpoint_callback.py
examples/DungeonEscape/python/test/: test_my_unity_env.py
examples/SimpleNetworking/: README.md  requirements.txt
examples/SimpleNetworking/Assets/Scenes/: SampleScene.unity
examples/SimpleNetworking/Assets/Scripts/: Sphere.cs
examples/SimpleNetworking/ProjectSettings/: ProjectSettings.asset
examples/SimpleNetworking/UserSettings/Layouts/: default-2021.dwlt
examples/SimpleNetworking/python/: get_height.py  get_pos.py  send_message.py  translate.py
peaceful_pie/: ray_results_helper.py  unity_comms.py
test/: test_ray_results_helper.py
(+7 files in other folders)
