[tool.poetry]
name = "peaceful-pie"
version = "0.1.0"
description = "Control Unity from Python!"
authors = ["Hugh Perkins <hughperkins@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "peaceful_pie"}]

[tool.poetry.dependencies]
python = "^3.10"
chili = "^1.8.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"
types-requests = "^2.28.11.7"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
