[tool.poetry]
name = "peaceful-pie"
version = "0.4.0-post.3+e916d96"
description = "Control Unity from Python!"
authors = ["Hugh Perkins <hughperkins@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "peaceful_pie"}]
repository = "https://github.com/hughperkins/peaceful-pie"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true

[tool.poetry.dependencies]
python = "^3.8"
chili = "^1.8.0"
requests = "^2.28.1"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"
types-requests = "^2.28.11.7"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
# build-backend = "poetry.core.masonry.api"
